--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
      <div class="btn btn-primary bt1" ><a  href="https://github.com/Mukeshparmar04/Text-to-Image-API-Comparator">Click👆</a></div>
     </div>
     <div class="bg-secondary p-6 rounded-lg shadow-md">
-     <img alt="Skill Factory platform interface showing skilled professionals and service options" class="rounded-lg mb-4" height="400" src="https://storage.googleapis.com/a1aa/image/GMXudW2G5se57h0bgNfvTYRQOpt5-RttZqZkJ5HT8X4.jpg" width="600"/>
+     <img alt="Skill Factory platform interface showing skilled professionals and service options" class="rounded-lg mb-4" height="400" src="skillF.jpg" width="600"/>
      <h5 class="text-xl font-semibold mb-2">
       Skill Factory
      </h5>
@@ -87,7 +87,7 @@
      <p>
       Implemented a facial recognition system to efficiently track student attendance in class. Automated data storage in Excel and the Student Management System. Enhanced student or employee management capabilities and streamlined attendance tracking through technological innovation.
      </p>
-     <div class="btn btn-primary bt1" ><a  href="https://github.com/Pranavvishwakarma/Face-Recognition-Attendance-System/tree/main">Click👆</a></div>
+     <div class="btn btn-primary bt1" ><a  href="https://github.com/Mukeshparmar04/Face-Recognition-Attendance-System">Click👆</a></div>
     </div>
    </div>
   </div>
