banking bot added

--- a/projects.html
+++ b/projects.html
@@ -89,6 +89,16 @@
      </p>
      <div class="btn btn-primary bt1" ><a  href="https://github.com/Mukeshparmar04/Face-Recognition-Attendance-System">Click👆</a></div>
     </div>
+    <div class="bg-secondary p-6 rounded-lg shadow-md">
+     <img alt="Banking at your fingertips, 24/7." class="rounded-lg mb-4" height="400" src="bankB11.webp" width="600"/>
+     <h5 class="text-xl font-semibold mb-2">
+        Banking Bot
+     </h5>
+     <p>
+        This project aims to develop a robust Banking Bot designed to revolutionize customer interaction with banking services. The bot's core function is to deliver immediate solutions to customer queries, simplifying complex banking processes. By providing 24/7 assistance, it eliminates wait times and enhances accessibility.
+     </p>
+     <div class="btn btn-primary bt1" ><a  href="https://github.com/Mukeshparmar04">Click👆</a></div>
+    </div>
    </div>
   </div>
   <footer class="bg-gray-800 text-white py-6">
