inhence about me

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,8 @@
     <div class="container mx-auto px-4 py-2 flex justify-between items-center">
      <a class="flex items-center" href="#">
       <img alt="Profile picture of Mukesh Parmar" class="rounded-full" height="35" src="pp.jpg" width="35"/>
-     </a>
+      <div class="ml-8 font-bold text-lg">Mukesh Parmar - Code & Create</div>
+    </a>
      <button class="text-gray-500 md:hidden block" id="nav-toggle">
       <i class="fas fa-bars">
       </i>
@@ -60,7 +61,7 @@
   <div class="container mx-auto px-4 py-8">
    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
     <div class="bg-secondary p-6 rounded-lg shadow-md">
-     <img alt="Text to Image Comparator: Text2Visual interface showing text input and image upload options" class="rounded-lg mb-4" height="400" src="https://storage.googleapis.com/a1aa/image/fbA6jT9rC4bNE4q1i5Lq7ZPDLfuo-8tBaVzleu8xtsc.jpg" width="600"/>
+     <img alt="Text to Image Comparator: Text2Visual interface showing text input and image upload options" class="rounded-lg mb-4 h-64" height="400" src="https://storage.googleapis.com/a1aa/image/fbA6jT9rC4bNE4q1i5Lq7ZPDLfuo-8tBaVzleu8xtsc.jpg" width="600"/>
      <h5 class="text-xl font-semibold mb-2">
       Text to Image Comparator: Text2Visual
      </h5>
@@ -70,7 +71,7 @@
      <div class="btn btn-primary bt1" ><a  href="https://github.com/Mukeshparmar04/Text-to-Image-API-Comparator">Click👆</a></div>
     </div>
     <div class="bg-secondary p-6 rounded-lg shadow-md">
-     <img alt="Skill Factory platform interface showing skilled professionals and service options" class="rounded-lg mb-4" height="400" src="skillF.jpg" width="600"/>
+     <img alt="Skill Factory platform interface showing skilled professionals and service options" class="rounded-lg mb-4 h-64" height="400" src="skillF.jpg" width="600"/>
      <h5 class="text-xl font-semibold mb-2">
       Skill Factory
      </h5>
@@ -80,7 +81,7 @@
      <div class="btn btn-primary bt1" ><a  href="https://github.com/Mukeshparmar04">Click👆</a></div>
     </div>
     <div class="bg-secondary p-6 rounded-lg shadow-md">
-     <img alt="Face Recognition Attendance System interface showing facial recognition in progress" class="rounded-lg mb-4" height="400" src="https://storage.googleapis.com/a1aa/image/dVePPW_YYDYcorWJgL7KRGXWvQ6eQ2fvAp5Pvc-5OK8.jpg" width="600"/>
+     <img alt="Face Recognition Attendance System interface showing facial recognition in progress" class="rounded-lg mb-4 h-64" height="400" src="face11.jpg" width="600"/>
      <h5 class="text-xl font-semibold mb-2">
       Face Recognition Attendance System
      </h5>
@@ -90,7 +91,7 @@
      <div class="btn btn-primary bt1" ><a  href="https://github.com/Mukeshparmar04/Face-Recognition-Attendance-System">Click👆</a></div>
     </div>
     <div class="bg-secondary p-6 rounded-lg shadow-md">
-     <img alt="Banking at your fingertips, 24/7." class="rounded-lg mb-4" height="400" src="bankB11.webp" width="600"/>
+     <img alt="Banking at your fingertips, 24/7." class="rounded-lg mb-4 h-64" height="400" src="bankB11.webp" width="600"/>
      <h5 class="text-xl font-semibold mb-2">
         Banking Bot
      </h5>
