--- a/home.html
+++ b/home.html
@@ -1,37 +1,75 @@
 <html lang="en">
-<head>
+ <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>Mukesh Parmar Portfolio</title>
+  <title>
+   Mukesh Parmar Portfolio
+  </title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com" rel="preconnect"/>
   <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet"/>
-  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" rel="stylesheet"/>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="font-poppins">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&amp;display=swap" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+  <script src="https://cdn.tailwindcss.com">
+  </script>
+  <style>
+   body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        main {
+            flex: 1;
+        }
+
+        .icon-container:hover {
+            background-color: rgb(223, 221, 221);
+            border-color: #a855f7;
+            border: 3.2px solid #a855f7;
+            transition: background-color 0.3s, border-color 0.3s;
+            /* border-radius: 10px; */
+            transform: scale(1.15);
+            cursor: grab;
+            overflow: hidden;
+            
+        }
+  </style>
+ </head>
+ <body class="font-poppins">
   <header>
-    <nav class="bg-white shadow-md">
-      <div class="container mx-auto px-4 py-2 flex justify-between items-center">
-        <a class="flex items-center" href="#">
-          <img alt="Profile picture of Mukesh Parmar" class="rounded-full" height="35" src="pp.jpg" width="35"/>
-        </a>
-        <button class="text-gray-500 md:hidden block" id="nav-toggle">
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="hidden md:flex space-x-6" id="nav-content">
-          <a class="text-gray-700 hover:text-blue-500" href="index1.html">Home</a>
-          <a class="text-gray-700 hover:text-blue-500" href="about.html">About</a>
-          <a class="text-gray-700 hover:text-blue-500" href="services.html">Services</a>
-          <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
-          <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
-        </div>
-      </div>
-    </nav>
+   <nav class="bg-white shadow-md">
+    <div class="container mx-auto px-4 py-2 flex justify-between items-center">
+     <a class="flex items-center" href="#">
+      <img alt="Profile picture of Mukesh Parmar" class="rounded-full" height="35" src="pp.jpg" width="35"/>
+      <div class="ml-8 font-bold text-lg">Mukesh Parmar - Code & Create</div>
+     </a>
+     <button class="text-gray-500 md:hidden block" id="nav-toggle">
+      <i class="fas fa-bars">
+      </i>
+     </button>
+     <div class="hidden md:flex space-x-6" id="nav-content">
+      <a class="text-gray-700 hover:text-blue-500" href="index.html">
+       Home
+      </a>
+      <a class="text-gray-700 hover:text-blue-500" href="about.html">
+       About
+      </a>
+      <a class="text-gray-700 hover:text-blue-500" href="services.html">
+       Services
+      </a>
+      <a class="text-gray-700 hover:text-blue-500" href="projects.html">
+       Projects
+      </a>
+      <a class="text-gray-700 hover:text-blue-500" href="contact.html">
+       Contact
+      </a>
+     </div>
+    </div>
+   </nav>
   </header>
   <main>
-    <section class="section py-8" id="projects" style="display: flex; color: black; flex-direction: column; min-height: 20vh; background: url('cont3.png') no-repeat center center fixed; background-size: cover; margin: 0 0.2rem;">
+    <section class="section py-8" id="projects" style="display: flex; color: black; flex-direction: column; min-height: 20vh; background: url('bg12.avif') no-repeat center center fixed; background-size: cover; margin: 0 0.2rem;">
       <div class="container mx-auto mt-8 px-4">
         <h2 class="text-3xl font-bold mt-8 mb-6 text-center text-white">Contact Me</h2>
       </div>
@@ -79,18 +117,18 @@
             </p>
             <p class="mt-4">
                 <a class="text-blue-700 hover:text-gray-900" href="mailto:mukeshpiploda2002@gmail.com">
-                    <i class="fas fa-phone-alt hover:text-blue-600"></i> 8815242848
+                    <i class="fas fa-phone-alt hover:text-gray-900"></i> 8815242848
                   </a>
               
             </p>
             <p class="mt-4">
                 <a class="text-blue-700 hover:text-gray-900" href="mailto:mukeshpiploda2002@gmail.com">
-                    <i class="fas fa-envelope hover:text-blue-600" ></i> mukeshpiploda2002@gmail.com
+                    <i class="fas fa-envelope hover:hover:text-gray-900" ></i> mukeshpiploda2002@gmail.com
                   </a>
             </p>
             <p class="mt-4">
-              <i class="fas fa-map text-blue-600"></i>
-              <a class="text-blue-600 " href="https://maps.app.goo.gl/KyhzHzXWtRirqvpm8">Google Maps</a>
+              <i class="fas fa-map text-blue-700 hover:text-gray-900"></i>
+              <a class="text-blue-700 hover:text-gray-900 " href="https://maps.app.goo.gl/KyhzHzXWtRirqvpm8">Google Maps</a>
             </p>
             <div class="mt-6 flex justify-left space-x-4">
               <a class="text-blue-700 hover:text-gray-900" href="https://linkedin.com/in/mukesh-parmar-986517258/">
@@ -109,12 +147,29 @@
     </div>
   </main>
   <footer class="bg-gray-800 text-white py-6 mt-auto">
-    <div class="container mx-auto px-4 text-center">
-      <p>© 2024 Mukesh Parmar. All rights reserved.</p>
-    </div>
+   <div class="container mx-auto px-4 text-center">
+    <p>
+     © 2024 Mukesh Parmar. All rights reserved.
+    </p>
+   </div>
   </footer>
-  <script src="port.js"></script>
-  <script crossorigin="anonymous" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script crossorigin="anonymous" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
-</body>
+  <script>
+   const navToggle = document.getElementById('nav-toggle');
+        const navContent = document.getElementById('nav-content');
+
+        navToggle.addEventListener('click', () => {
+            navContent.classList.toggle('hidden');
+        });
+
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbyIiSlzpkbtEfpo-ekLBAShD4uQIpkCjUThsW7zx64QmnXCFhxEbMLlsnTzOTB0VeaUEw/exec';
+        const form = document.forms['submit-to-google-sheet'];
+
+        form.addEventListener('submit', e => {
+            e.preventDefault();
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => console.log('Success!', response))
+                .catch(error => console.error('Error!', error.message));
+        });
+  </script>
+ </body>
 </html>
