--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="container mx-auto px-4 py-2 flex justify-between items-center">
      <a class="flex items-center" href="#">
       <img alt="Profile picture of Mukesh Parmar" class="rounded-full" height="35" src="pp.jpg" width="35"/>
+      <div class="ml-8 font-bold text-lg">Mukesh Parmar - Code & Create</div>
      </a>
      <button class="text-gray-500 md:hidden block" id="nav-toggle">
       <i class="fas fa-bars"></i>
