--- a/services.html
+++ b/services.html
@@ -29,6 +29,7 @@
     <div class="container mx-auto px-4 py-2 flex justify-between items-center">
      <a class="flex items-center" href="#">
       <img alt="Profile picture of Mukesh Parmar" class="rounded-full" height="35" src="pp.jpg" width="35"/>
+      <div class="ml-8 font-bold text-lg">Mukesh Parmar - Code & Create</div>
      </a>
      <button class="text-gray-500 md:hidden block" id="nav-toggle">
       <i class="fas fa-bars">
@@ -86,10 +87,10 @@
        <i class="fas fa-mobile-alt text-4xl text-blue-500 mb-4">
        </i>
        <h3 class="text-xl font-semibold mb-2">
-        Mobile App Development
+        Web design
        </h3>
        <p>
-        Creating user-friendly mobile applications.
+        Elevating your brand with modern web solutions.
        </p>
       </div>
       <div class="service text-center p-6 bg-white rounded-lg shadow-md">
@@ -100,6 +101,16 @@
        </h3>
        <p>
         Efficient data storage and retrieval solutions.
+       </p>
+      </div>
+      <div class="service text-center p-6 bg-white rounded-lg shadow-md">
+       <!-- <i class="fas fa-database text-4xl text-blue-500 mb-4"></i> -->
+       <i class="fa-solid fa-tachograph-digital text-4xl text-blue-500 mb-4"></i>
+       <h3 class="text-xl font-semibold mb-2">
+        Data visualization and data transformation
+       </h3>
+       <p>
+        Unlocking data's potential through visualization and transformation.
        </p>
       </div>
      </div>
