--- a/about.html
+++ b/about.html
@@ -38,42 +38,61 @@
  </head>
  <body class="font-poppins">
   <header>
-   <nav class="bg-white shadow-md">
-    <div class="container mx-auto px-4 py-2 flex justify-between items-center">
-     <a class="flex items-center" href="#">
-      <img alt="Profile picture of Mukesh Parmar" class="rounded-full" height="35" src="pp.jpg" width="35"/>
-      <div class="ml-8 font-bold text-lg">Mukesh Parmar - Code & Create</div>
-     </a>
-     <button class="text-gray-500 md:hidden block" id="nav-toggle">
-      <i class="fas fa-bars">
-      </i>
-     </button>
-     <div class="hidden md:flex space-x-6" id="nav-content">
-      <a class="text-gray-700 hover:text-blue-500" href="index.html">
-       Home
-      </a>
-      <a class="text-gray-700 hover:text-blue-500" href="about.html">
-       About
-      </a>
-      <a class="text-gray-700 hover:text-blue-500" href="services.html">
-       Services
-      </a>
-      <a class="text-gray-700 hover:text-blue-500" href="projects.html">
-       Projects
-      </a>
-      <a class="text-gray-700 hover:text-blue-500" href="contact.html">
-       Contact
-      </a>
-     </div>
-    </div>
-   </nav>
+    <nav class="bg-white shadow-md">
+        <div class="container mx-auto px-4 py-2 flex justify-between items-center">
+         <a class="flex items-center" href="#">
+          <img alt="Profile picture of Mukesh Parmar" class="rounded-full" height="35" src="logo/pp.jpg" width="35"/>
+          <div class="ml-8 font-bold text-lg">Mukesh Parmar - Code & Create</div>
+         </a>
+         <button class="text-gray-500 md:hidden block" id="nav-toggle">
+          <i class="fas fa-bars">
+          </i>
+         </button>
+         <div class="hidden md:flex space-x-6" id="nav-content">
+          <a class="text-gray-700 hover:text-blue-500" href="index.html">
+           Home
+          </a>
+          <a class="text-gray-700 hover:text-blue-500" href="about.html">
+           About
+          </a>
+          <a class="text-gray-700 hover:text-blue-500" href="services.html">
+           Services
+          </a>
+          <a class="text-gray-700 hover:text-blue-500" href="projects.html">
+           Projects
+          </a>
+          <a class="text-gray-700 hover:text-blue-500" href="contact.html">
+           Contact
+          </a>
+         </div>
+        </div>
+        <div class="md:hidden" id="mobile-menu">
+         <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
+          <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="index.html">
+           Home
+          </a>
+          <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="about.html">
+           About
+          </a>
+          <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="services.html">
+           Services
+          </a>
+          <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="projects.html">
+           Projects
+          </a>
+          <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="contact.html">
+           Contact
+          </a>
+         </div>
+        </div>
+       </nav>
   </header>
   <main>
     <section class="section py-8" id="projects" style="display: flex;
   color: black;
   flex-direction: column;
   min-height: 20vh;
-  background: url('bg12.avif') no-repeat center center fixed;
+  background: url('logo/bg12.avif') no-repeat center center fixed;
   background-size: cover;
   margin: 0 0.2rem ;">
    <div class="container mx-auto mt-8 px-4">
@@ -86,7 +105,7 @@
    <section class="section py-8" id="about">
     <div class="container mx-auto px-4 pt-8">
      <div class="flex flex-col md:flex-row items-center">
-      <img alt="Profile Picture of Mukesh Parmar" class="rounded-3xl w-100 h-100 md:w-200 md:h-200 mb-4 md:mb-0 md:mr-8" height="300" src="pp.jpg" width="1800"/>
+      <img alt="Profile Picture of Mukesh Parmar" class="rounded-3xl w-100 h-100 md:w-200 md:h-200 mb-4 md:mb-0 md:mr-8" height="300" src="logo/pp.jpg" width="1800"/>
       <div class="about-text">
         <h1 class="text-3xl font-bold mb-4" >Hi👋</h1>
         <h1 class="text-3xl font-bold mb-4" > I'm 
@@ -120,37 +139,37 @@
      </h1>
      <div class="grid grid-cols-4 gap-12">
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="Python logo" class="mx-auto rounded-lg" height="100" src="python_logo.jpg" width="100"/>
+       <img alt="Python logo" class="mx-auto rounded-lg" height="100" src="logo/python_logo.jpg" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="HTML5 logo" class="mx-auto rounded-lg" height="100" src="html_logo.png" width="100"/>
+       <img alt="HTML5 logo" class="mx-auto rounded-lg" height="100" src="logo/html_logo.png" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="CSS3 logo" class="mx-auto rounded-lg" height="100" src="css_logo.png" width="100"/>
+       <img alt="CSS3 logo" class="mx-auto rounded-lg" height="100" src="logo/css_logo.png" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="Tailwind CSS logo" class="mx-auto rounded-lg" height="100" src="tailwind_logo.png" width="100"/>
+       <img alt="Tailwind CSS logo" class="mx-auto rounded-lg" height="100" src="logo/tailwind_logo.png" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="Bootstrap logo" class="mx-auto rounded-lg" height="100" src="bootstrap_logo.jpg" width="100"/>
+       <img alt="Bootstrap logo" class="mx-auto rounded-lg" height="100" src="logo/bootstrap_logo.jpg" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="JavaScript logo" class="mx-auto rounded-lg" height="100" src="js_logo.png" width="100"/>
+       <img alt="JavaScript logo" class="mx-auto rounded-lg" height="100" src="logo/js_logo.png" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="React logo" class="mx-auto rounded-lg" height="100" src="react_logo.png" width="100"/>
+       <img alt="React logo" class="mx-auto rounded-lg" height="100" src="logo/react_logo.png" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="mongoDb logo" class="mx-auto rounded-lg" height="100" src="mongodb_logo.svg" width="100"/>
+       <img alt="mongoDb logo" class="mx-auto rounded-lg" height="100" src="logo/mongodb_logo.svg" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="C++ logo" class="mx-auto rounded-lg" height="100" src="c++_logo.png" width="100"/>
+       <img alt="C++ logo" class="mx-auto rounded-lg" height="100" src="logo/c++_logo.png" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="sql logo" class="mx-auto rounded-lg" height="100" src="sql_logo.png" width="100"/>
+       <img alt="sql logo" class="mx-auto rounded-lg" height="100" src="logo/sql_logo.png" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-        <img alt="Canva logo" class="mx-auto rounded-lg" height="100" src="canva_logo.jpg" width="100"/>
+        <img alt="Canva logo" class="mx-auto rounded-lg" height="100" src="logo/canva_logo.jpg" width="100"/>
        </div>
       
      </div>
@@ -166,19 +185,19 @@
      </h1>
      <div class="grid grid-cols-4 gap-12">
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="Vscode logo" class="mx-auto rounded-lg" height="100" src="vs_code_logo.png" width="100"/>
+       <img alt="Vscode logo" class="mx-auto rounded-lg" height="100" src="logo/vs_code_logo.png" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-        <img alt="Git logo" class="mx-auto rounded-lg" height="100" src="git_logo.png" width="100"/>
+        <img alt="Git logo" class="mx-auto rounded-lg" height="100" src="logo/git_logo.png" width="100"/>
        </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="postman" class="mx-auto rounded-lg" height="100" src="postman_logo.png" width="100"/>
+       <img alt="postman" class="mx-auto rounded-lg" height="100" src="logo/postman_logo.png" width="100"/>
       </div>      
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-       <img alt="pycharm" class="mx-auto rounded-lg" height="100" src="pycharm_logo.jpg" width="100"/>
+       <img alt="pycharm" class="mx-auto rounded-lg" height="100" src="logo/pycharm_logo.jpg" width="100"/>
       </div>
       <div class="p-4 border border-purple-500 rounded-lg icon-container">
-        <img alt="powerBi logo" class="mx-auto rounded-lg" height="100" src="powerBI_logo.png" width="100"/>
+        <img alt="powerBi logo" class="mx-auto rounded-lg" height="100" src="logo/powerBI_logo.png" width="100"/>
        </div>
       
      </div>
@@ -195,9 +214,10 @@
   <script>
    const navToggle = document.getElementById('nav-toggle');
         const navContent = document.getElementById('nav-content');
+        const mobileMenu = document.getElementById('mobile-menu');
 
         navToggle.addEventListener('click', () => {
-            navContent.classList.toggle('hidden');
+            mobileMenu.classList.toggle('hidden');
         });
 
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyIiSlzpkbtEfpo-ekLBAShD4uQIpkCjUThsW7zx64QmnXCFhxEbMLlsnTzOTB0VeaUEw/exec';
