--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
    <nav class="bg-white shadow-md">
     <div class="container mx-auto px-4 py-2 flex justify-between items-center">
      <a class="flex items-center" href="#">
-      <img alt="Profile picture of Mukesh Parmar" class="rounded-full" height="35" src="pp.jpg" width="35"/>
+      <img alt="Profile picture of Mukesh Parmar" class="rounded-full" height="35" src="logo/pp.jpg" width="35"/>
       <div class="ml-8 font-bold text-lg">Mukesh Parmar - Code & Create</div>
      </a>
      <button class="text-gray-500 md:hidden block" id="nav-toggle">
@@ -66,10 +66,29 @@
       </a>
      </div>
     </div>
+    <div class="md:hidden" id="mobile-menu">
+     <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
+      <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="index.html">
+       Home
+      </a>
+      <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="about.html">
+       About
+      </a>
+      <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="services.html">
+       Services
+      </a>
+      <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="projects.html">
+       Projects
+      </a>
+      <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="contact.html">
+       Contact
+      </a>
+     </div>
+    </div>
    </nav>
   </header>
   <main>
-    <section class="section py-8" id="projects" style="display: flex; color: black; flex-direction: column; min-height: 20vh; background: url('bg12.avif') no-repeat center center fixed; background-size: cover; margin: 0 0.2rem;">
+    <section class="section py-8" id="projects" style="display: flex; color: black; flex-direction: column; min-height: 20vh; background: url('logo/bg12.avif') no-repeat center center fixed; background-size: cover; margin: 0 0.2rem;">
       <div class="container mx-auto mt-8 px-4">
         <h2 class="text-3xl font-bold mt-8 mb-6 text-center text-white">Contact Me</h2>
       </div>
@@ -156,9 +175,10 @@
   <script>
    const navToggle = document.getElementById('nav-toggle');
         const navContent = document.getElementById('nav-content');
+        const mobileMenu = document.getElementById('mobile-menu');
 
         navToggle.addEventListener('click', () => {
-            navContent.classList.toggle('hidden');
+            mobileMenu.classList.toggle('hidden');
         });
 
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyIiSlzpkbtEfpo-ekLBAShD4uQIpkCjUThsW7zx64QmnXCFhxEbMLlsnTzOTB0VeaUEw/exec';
