--- a/index.html
+++ b/index.html
@@ -22,31 +22,61 @@
  </head>
  <body class="font-poppins">
   <header>
-   <nav class="bg-white shadow-md">
-    <div class="container mx-auto px-4 py-2 flex justify-between items-center">
-     <a class="flex items-center" href="#">
-      <img alt="Profile picture of Mukesh Parmar" class="rounded-full" height="35" src="pp.jpg" width="35"/>
-      <div class="ml-8 font-bold text-lg">Mukesh Parmar - Code & Create</div>
-     </a>
-     <button class="text-gray-500 md:hidden block" id="nav-toggle">
-      <i class="fas fa-bars"></i>
-     </button>
-     <div class="hidden md:flex space-x-6" id="nav-content">
-      <a class="text-gray-700 hover:text-blue-500" href="index.html">Home</a>
-      <a class="text-gray-700 hover:text-blue-500" href="about.html">About</a>
-      <a class="text-gray-700 hover:text-blue-500" href="services.html">Services</a>
-      <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
-      <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
-     </div>
-    </div>
-   </nav>
+    <nav class="bg-white shadow-md">
+      <div class="container mx-auto px-4 py-2 flex justify-between items-center">
+       <a class="flex items-center" href="#">
+        <img alt="Profile picture of Mukesh Parmar" class="rounded-full" height="35" src="logo/pp.jpg" width="35"/>
+        <div class="ml-8 font-bold text-lg">Mukesh Parmar - Code & Create</div>
+       </a>
+       <button class="text-gray-500 md:hidden block" id="nav-toggle">
+        <i class="fas fa-bars">
+        </i>
+       </button>
+       <div class="hidden md:flex space-x-6" id="nav-content">
+        <a class="text-gray-700 hover:text-blue-500" href="index.html">
+         Home
+        </a>
+        <a class="text-gray-700 hover:text-blue-500" href="about.html">
+         About
+        </a>
+        <a class="text-gray-700 hover:text-blue-500" href="services.html">
+         Services
+        </a>
+        <a class="text-gray-700 hover:text-blue-500" href="projects.html">
+         Projects
+        </a>
+        <a class="text-gray-700 hover:text-blue-500" href="contact.html">
+         Contact
+        </a>
+       </div>
+      </div>
+      <div class="md:hidden" id="mobile-menu">
+       <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
+        <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="index.html">
+         Home
+        </a>
+        <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="about.html">
+         About
+        </a>
+        <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="services.html">
+         Services
+        </a>
+        <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="projects.html">
+         Projects
+        </a>
+        <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="contact.html">
+         Contact
+        </a>
+       </div>
+      </div>
+     </nav>
   </header>
   <main>
     <section class="section py-8 relative" id="home" style="display: flex;
     color: black;
     flex-direction: column;
     min-height: 80vh;
-    background: url('bg12.avif') no-repeat center center fixed;
+    background: url('logo/bg12.avif') no-repeat center center fixed;
     background-size: cover;">
      <div class="container mx-auto mt-5 px-4 text-center relative z-10">
       <h1 class="text-4xl font-bold mt-5 mb-3 text-white">
@@ -70,9 +100,10 @@
   <script>
     const navToggle = document.getElementById('nav-toggle');
     const navContent = document.getElementById('nav-content');
+    const mobileMenu = document.getElementById('mobile-menu');
 
     navToggle.addEventListener('click', () => {
-      navContent.classList.toggle('hidden');
+      mobileMenu.classList.toggle('hidden');
     });
 
     const scriptURL = 'https://script.google.com/macros/s/AKfycbyIiSlzpkbtEfpo-ekLBAShD4uQIpkCjUThsW7zx64QmnXCFhxEbMLlsnTzOTB0VeaUEw/exec';
