--- a/home.html
+++ b/home.html
@@ -61,6 +61,9 @@
         <a class="text-gray-700 hover:text-blue-500" href="projects.html">
          Projects
         </a>
+        <a class="text-gray-700 hover:text-blue-500" href="projects.html">
+         Resume
+        </a>
         <a class="text-gray-700 hover:text-blue-500" href="contact.html">
          Contact
         </a>
@@ -80,6 +83,9 @@
         <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="projects.html">
          Projects
         </a>
+        <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="resume.html">
+          Resume
+        </a>
         <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="contact.html">
          Contact
         </a>
@@ -90,83 +96,13 @@
   <main>
     <section class="section py-8" id="projects" style="display: flex; color: black; flex-direction: column; min-height: 20vh; background: url('logo/bg12.avif') no-repeat center center fixed; background-size: cover; margin: 0 0.2rem;">
       <div class="container mx-auto mt-8 px-4">
-        <h2 class="text-3xl font-bold mt-8 mb-6 text-center text-white">Contact Me</h2>
+        <h2 class="text-3xl font-bold mt-8 mb-6 text-center text-white">Resume</h2>
       </div>
     </section>
-    <div class="container mx-auto p-6">
-      <div class=" shadow-md rounded-lg p-8">
-        <div class="flex flex-col md:flex-row">
-          <div class="md:w-2/3">
-            <p class="mb-6">Contact me about anything related to me or services. We'll do our best to get back to you as soon as possible.</p>
-            <form id="contact-form">
-              <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="name">Your Name *</label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="name" placeholder="Your Name" type="text" required/>
-              </div>
-              <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="phone">Phone Number</label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="phone" placeholder="Phone Number" type="text" required/>
-              </div>
-              <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="email">Email *</label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" placeholder="Email" type="email" required/>
-              </div>
-              <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="subject">Message</label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="subject" placeholder="Subject" type="text" required/>
-              </div>
-              <div class="flex items-center justify-between">
-                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">Submit</button>
-              </div>
-            </form>
-          </div>
-          <div class="md:w-1/3 md:pl-8 mt-8 md:mt-0">
-            <h2 class="text-xl font-bold text-blue-600">Mukesh Parmar</h2>
-            <p class="mt-4">
-              <i class="fas fa-map-marker-alt text-blue-600"></i>
-              02, Shiv-Sakti Nagar, LIG Colony
-              <br/>
-              Indore,
-              <br/>
-              Indore 452011
-              <br/>
-              Madhya Pradesh 001
-              <br/>
-              India
-            </p>
-            <p class="mt-4">
-                <a class="text-blue-700 hover:text-gray-900" href="https://web.whatsapp.com/8815242848">
-                    <i class="fas fa-phone-alt hover:text-gray-900"></i> 8815242848
-                  </a>
-              
-            </p>
-            <p class="mt-4">
-                <a class="text-blue-700 hover:text-gray-900" href="mailto:mukeshpiploda2002@gmail.com">
-                    <i class="fas fa-envelope hover:hover:text-gray-900" ></i> mukeshpiploda2002@gmail.com
-                  </a>
-            </p>
-            <p class="mt-4">
-              <i class="fas fa-map text-blue-700 hover:text-gray-900"></i>
-              <a class="text-blue-700 hover:text-gray-900 " href="https://maps.app.goo.gl/KyhzHzXWtRirqvpm8">Google Maps</a>
-            </p>
-            <div class="mt-6 flex justify-left space-x-4">
-              <a class="text-blue-700 hover:text-gray-900" href="https://linkedin.com/in/mukesh-parmar-986517258/">
-                <i class="fab fa-linkedin fa-2x"></i>
-              </a>
-              <a class="text-blue-700 hover:text-gray-900" href="https://github.com/Mukeshparmar04">
-                <i class="fab fa-github fa-2x"></i>
-              </a>
-              <a class="text-blue-700 hover:text-gray-900" href="https://www.codechef.com/users/pr0863cs201093">
-                <i class="fas fa-code fa-2x"></i>
-              </a>
-              </a>
-              <a class="text-blue-700 hover:text-gray-900" href="https://www.instagram.com/mukesh_p04/">
-                <i class="fa-brands fa-instagram fa-2x"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="container my-12 mx-auto flex justify-center items-center " >
+      <object data="MukeshParmar_Resume  (2).pdf" type="application/pdf" width="800"  height="600">
+        <p>Your browser does not support PDFs. <a href="MukeshParmar_Resume  (2).pdf">Download the PDF</a>.</p>
+      </object>
     </div>
   </main>
   <footer class="bg-gray-800 text-white py-6 mt-auto">
