--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,10 @@
       <a class="text-gray-700 hover:text-blue-500" href="projects.html">
        Projects
       </a>
+      <a class="text-gray-700 hover:text-blue-500" href="resume.html">
+        Resume
+       </a>
+      </a>
       <a class="text-gray-700 hover:text-blue-500" href="contact.html">
        Contact
       </a>
@@ -56,6 +60,9 @@
       </a>
       <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="projects.html">
        Projects
+      </a>
+      <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="resume.html">
+        Resume
       </a>
       <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="contact.html">
        Contact
