--- a/services.html
+++ b/services.html
@@ -48,6 +48,9 @@
           <a class="text-gray-700 hover:text-blue-500" href="projects.html">
            Projects
           </a>
+          <a class="text-gray-700 hover:text-blue-500" href="resume.html">
+           Resume
+          </a>
           <a class="text-gray-700 hover:text-blue-500" href="contact.html">
            Contact
           </a>
@@ -66,6 +69,9 @@
           </a>
           <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="projects.html">
            Projects
+          </a>
+          <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="resume.html">
+           Resume
           </a>
           <a class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-blue-500" href="contact.html">
            Contact
