--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!-- <html lang="en">
  <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -100,7 +100,7 @@
       </div>
     </section>
     <div class="container my-12 mx-auto flex justify-center items-center " >
-      <object data="MukeshParmar_Resume  (2).pdf" type="application/pdf" width="800"  height="600">
+      <object data="MukeshParmar_Resume  (2).pdf" type="application/pdf" width="800"  height="1000">
         <p>Your browser does not support PDFs. <a href="MukeshParmar_Resume  (2).pdf">Download the PDF</a>.</p>
       </object>
     </div>
@@ -178,4 +178,4 @@
   });
   </script>
  </body>
-</html>
+</html> -->
