--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     .section-title::after {
       content: '';
       position: absolute;
-      width: 80px;
+      width: 80%;
       height: 5px;
       bottom: -15px;
       left: 50%;
@@ -257,7 +257,7 @@
     }
     
     .section-title:hover::after {
-      width: 120px;
+      width: 100%;
     }
     
     /* Card Styles */
@@ -460,6 +460,15 @@
       z-index: 9999;
       transition: width 0.4s ease;
     }
+
+    .particles-js {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
   </style>
 </head>
 <body class="bg-gray-50">
@@ -529,6 +538,7 @@
 
   <!-- Hero Section -->
   <section class="hero-section">
+    <div id="particles-js" class="particles-js"></div>
     <div class="container mx-auto px-4 relative z-10">
       <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="md:w-1/2 mb-12 md:mb-0 text-center md:text-left fade-in">
@@ -839,7 +849,107 @@
     <i class="fas fa-arrow-up"></i>
   </button>
 
+  <!-- Particles.js for background animation -->
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
   <script>
+
+    // Initialize particles.js
+    document.addEventListener('DOMContentLoaded', function() {
+      if (typeof particlesJS !== 'undefined') {
+        particlesJS('particles-js', {
+          particles: {
+            number: {
+              value: 80,
+              density: {
+                enable: true,
+                value_area: 800
+              }
+            },
+            color: {
+              value: '#ffffff'
+            },
+            shape: {
+              type: 'circle',
+              stroke: {
+                width: 0,
+                color: '#000000'
+              }
+            },
+            opacity: {
+              value: 0.5,
+              random: false,
+              anim: {
+                enable: false,
+                speed: 1,
+                opacity_min: 0.1,
+                sync: false
+              }
+            },
+            size: {
+              value: 3,
+              random: true,
+              anim: {
+                enable: false,
+                speed: 40,
+                size_min: 0.1,
+                sync: false
+              }
+            },
+            line_linked: {
+              enable: true,
+              distance: 150,
+              color: '#ffffff',
+              opacity: 0.4,
+              width: 1
+            },
+            move: {
+              enable: true,
+              speed: 2,
+              direction: 'none',
+              random: false,
+              straight: false,
+              out_mode: 'out',
+              bounce: false,
+              attract: {
+                enable: false,
+                rotateX: 600,
+                rotateY: 1200
+              }
+            }
+          },
+          interactivity: {
+            detect_on: 'canvas',
+            events: {
+              onhover: {
+                enable: true,
+                mode: 'grab'
+              },
+              onclick: {
+                enable: true,
+                mode: 'push'
+              },
+              resize: true
+            },
+            modes: {
+              grab: {
+                distance: 140,
+                line_linked: {
+                  opacity: 1
+                }
+              },
+              push: {
+                particles_nb: 4
+              }
+            }
+          },
+          retina_detect: true
+        });
+      }
+    });
+
+
+
     // Page loading progress
     window.addEventListener('load', function() {
       const loadingBar = document.getElementById('loading-bar');
